# ChaosTheoryProgramming

./: CMakeLists.txt  LICENSE  README.md
Config/: Config_Definitions.h  Config_Functions.c  Config_Functions.h  Config_Mathematics.c  Config_Mathematics.h  Config_test.h
ExternalLibs/gnuplot/docs/psdoc/: ps_symbols.ps
ExternalLibs/gnuplot/share/texmf/tex/generic/gnuplot/: gnuplot-lua-tikz-common.tex
ExternalLibs/gnuplot/share/texmf/tex/latex/gnuplot/: gnuplot-lua-tikz.sty
Project/: main.c  test.c
